<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson1.HelloConstraintActivity">


    <Button
        android:id="@+id/button_toast_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="showToast"
        android:text="@string/button_label_toast"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_count_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3F51B5"
        android:onClick="countUp"
        android:text="@string/button_label_count"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/button_toast_constraint"
        app:layout_constraintTop_toBottomOf="@+id/zeroButton" />

    <TextView
        android:id="@+id/show_count_constraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="#FFFF00"
        android:gravity="center_vertical"
        android:text="@string/count_initial_value"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_count_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_toast_constraint"
        app:layout_constraintTop_toTopOf="@+id/button_toast_constraint"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        android:onClick="countZero"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="@+id/button_toast_constraint"
        app:layout_constraintTop_toBottomOf="@+id/button_toast_constraint" />


</androidx.constraintlayout.widget.ConstraintLayout>